Basic debugging system.